subiendo un cambio

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li class="menu-item">Customers</li> <!-- Elemento de una lista -->
         <li class="menu-item">Resources</li> <!-- Elemento de una lista -->
         <li class="menu-item">About</li> <!-- Elemento de una lista -->
+        esto es un cambio
       </ul>
     </nav>
     <!-- Contenedor de acciones de usuario -->
