--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li class="menu-item">Customers</li> <!-- Elemento de una lista -->
         <li class="menu-item">Resources</li> <!-- Elemento de una lista -->
         <li class="menu-item">About</li> <!-- Elemento de una lista -->
-        esto es un cambio
+        esto es un cambio que solo está en la rama main
       </ul>
     </nav>
     <!-- Contenedor de acciones de usuario -->
