cambios ultima clase

--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
 
     <form>
       <input type="email">
-      <button type="submit" class="texto-boton">
+      <button type="submit" class="texto-boton button-hover">
+        Try it now &rarr;
+      </button>
+      <button type="submit" class="texto-boton button-animated-hover">
         Try it now &rarr;
       </button>
     </form>
