--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-header">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img
           src="https://img.freepik.com/vector-premium/te-verde-caliente-o-taza-bebida-matcha-diseno-logotipo-grafico-vectorial-simbolo-icono-signo-ilustracion-creativa_15473-9152.jpg?w=2000"
           width="30"
@@ -63,7 +63,7 @@
             <a class="nav-link" href="#">Resources</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="aboutUs.html">About</a>
           </li>
         </ul>
         <form class="d-flex actions text-nowrap">
@@ -73,6 +73,11 @@
       </div>
     </div>
   </nav>
+
+  <section class="hero">
+    <h1 class="conEm">Este es mi hero</h1>
+    <h1 class="conRem">Este es con rem</h1>
+  </section>
 
   <section class="main">
     <h1>Build your blog. Build your business.</h1>
